--- a/style.css
+++ b/style.css
@@ -16,11 +16,8 @@ body {
 :root {
     
     --primary-color: #fff;
-    
-
     font-size: 62.5%;
     /* 1rem = 10px */
-
     --nav-height: 7.2rem;
 }
 
@@ -32,19 +29,38 @@ body {
     -o-background-size: cover;
 }
 
- nav {
+.img-background-2 {
+    background: url("../static/mountains-universe-2.svg") no-repeat center center fixed;
+    background-size: cover;
+    -webkit-background-size: cover;
+    -moz-background-size: cover;
+    -o-background-size: cover;
+}
+
+.img-background-3 {
+    background: url("../static/mountains-universe-3.svg") no-repeat center center fixed;
+    background-size: cover;
+    -webkit-background-size: cover;
+    -moz-background-size: cover;
+    -o-background-size: cover;
+}
+
+.page {
+
+    width: 1000px;
+    margin: 0 auto;
+
+}
+
+nav {
 
     display: flex;
     justify-content: space-between;
     align-items: center;
-    
     height: var(--nav-height);
-    
     position: fixed;
     top: 0;
     max-width: 100vw;
-    
-
 }
 
 
@@ -110,5 +126,29 @@ main h1 {
     font-size: 1.4em;
     
 
+}
+
+.main-universe {
+    display: flex;
+    flex-direction: column;
+    justify-content: flex-start;
+    
+    width: 1600px;
+    height: 600px;
+    /* border: 1px solid red; */
+    padding-top: 63px;
+    margin-left: 103px;
+}
+
+main .content {
+    width: 648px;
+    min-height: 203px;
+}
+
+.content {
+    font-size: 18px;
+    font-family: 'Roboto', sans-serif;
+    font-weight: 100;
+    line-height: 28.8px;
 }
 
